--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,9 +1,16 @@
 * {
   margin: 0;
   padding: 0;
-}
-body {
   box-sizing: border-box;
+  -moz-user-select: none;
+  /*火狐*/
+  -webkit-user-select: none;
+  /*webkit浏览器*/
+  -ms-user-select: none;
+  /*IE10*/
+  -khtml-user-select: none;
+  /*早期浏览器*/
+  user-select: none;
 }
 .clearfix:after {
   /*伪元素是行内元素 正常浏览器清除浮动方法*/
