--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -1,10 +1,17 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-body {
   box-sizing: border-box;
+  // 取消双击字体选中
+  -moz-user-select: none;
+  /*火狐*/
+  -webkit-user-select: none;
+  /*webkit浏览器*/
+  -ms-user-select: none;
+  /*IE10*/
+  -khtml-user-select: none;
+  /*早期浏览器*/
+  user-select: none;
 }
 
 // 清除浮动
