--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -12,6 +12,25 @@
   -khtml-user-select: none;
   /*早期浏览器*/
   user-select: none;
+
+  color: #334055;
+
+  .router-link {
+    text-decoration: none !important;
+  }
+
+  .router-link-active {
+    text-decoration: none !important;
+  }
+
+  a {
+    text-decoration: none !important;
+
+  }
+
+  .el-scrollbar p:nth-child(1) {
+    border: 0;
+  }
 }
 
 // 清除浮动
